# py-termcore

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  pyproject.toml
docs/: CLEAN-UP.md  DEVELOPMENT.md
termcore/cli/: __init__.py
termcore/io/: app_state_storage.py  database.py  errors.py  file.py  textfile.py
termcore/tui/: __init__.py  binding_groups.py  custom_bindings.py  help_rows.py  help_screen.py  theme_loader.py
termcore/tui/custom_widgets/: __init__.py  app_header.py  custom_checkbox.py  custom_data_table.py  custom_selection.py  footer_rows.py  multiline_footer.py  status_bar.py  tab_rows.py
termcore/tui/themes/: __init__.py
termcore/tui/themes/classic-black-v1/: theme.py
termcore/tui/themes/classic-black-v2/: theme.py
termcore/tui/themes/compact-gray/: theme.py
termcore/tui/themes/mnml-black/: theme.py
termcore/tui/themes/mnml-deepblack/: theme.py
termcore/tui/themes/pure-amber/: theme.py
termcore/tui/themes/pure-black/: theme.py
termcore/tui/themes/pure-blue/: theme.py
termcore/tui/themes/pure-green/: theme.py
termcore/tui/themes/pure-sweet16/: theme.py
termcore/tui/themes/xplore-blue/: theme.py
termcore/tui/themes/xplore-blue-muted/: theme.py
termcore/util/: datetime.py  index.py  logger.py  singleton.py  version.py
termz/: __init__.py
termz/cli/: output.py
termz/io/: __init__.py  app_state_storage.py  database.py  errors.py  file.py  textfile.py
termz/tui/: custom_bindings.py  question_screen.py  theme_loader.py
termz/tui/custom_widgets/: custom_checkbox.py  custom_data_table.py  custom_selection.py  multiline_footer.py
termz/tui/themes/: __init__.py
termz/tui/themes/classic-black-saturated/: theme.py
termz/tui/themes/classic-black-v1/: theme.py
termz/tui/themes/classic-black-v2/: theme.py
termz/tui/themes/classic-blue/: theme.py
termz/tui/themes/compact-gray/: theme.py
termz/tui/themes/mnml-black/: theme.py
termz/tui/themes/mnml-deepblack/: theme.py
termz/tui/themes/pure-amber/: theme.py
termz/tui/themes/pure-black/: theme.py
termz/tui/themes/pure-blue/: theme.py
termz/tui/themes/pure-green/: theme.py
termz/tui/themes/pure-sweet16/: theme.py
termz/tui/themes/xplore-black/: theme.py
termz/tui/themes/xplore-blue/: theme.py
termz/tui/themes/xplore-blue-muted/: theme.py
termz/tui/themes/xplore-teal/: theme.py
termz/util/: __init__.py  datetime.py  debug.py  index.py  logger.py  singleton.py  string.py  validation.py  version.py
tests/: test_docs.py  test_public_api.py
tests/io/: conftest.py  test_database.py  test_textfile.py
tests/tui/: conftest.py  test_app_header.py  test_custom_bindings.py  test_footer_rows.py  test_help_rows.py  test_help_screen.py  test_multiline_footer.py  test_status_bar.py  test_tab_rows.py  test_theme_loader.py
tests/util/: test_datetime.py  test_index.py  test_string.py
