[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termz"
version = "0.1.1"
description = "Terminal utilities for CLI, TUI, IO and general use"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = ["rich", "textual", "pyyaml"]
keywords = ["cli", "tui", "terminal", "io", "utils"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Terminals",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.31",
    "coverage>=7.13.4",
    "pytest>=9.0",
    "pytest-asyncio>=1.0",  # required to drive Textual apps via run_test()
    "pytest-cov>=7.0",
    "ruff>=0.15",
]

[project.urls]
Homepage = "https://github.com/cgroening/py-termz"
Repository = "https://github.com/cgroening/py-termz"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"  # TUI tests are async; no per-test marker needed
xfail_strict = true    # an xfail that passes is a stale expectation
# A warning is a defect that has not surfaced yet, so the suite fails on it.
# Third-party deprecations get an explicit entry here rather than turning the
# rule off, so that each exception stays visible and dated.
filterwarnings = ["error"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=termz",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["termz"]
branch = true

[tool.coverage.report]
show_missing = true
# Holds the current level. Coverage that enforces nothing is decoration.
# Raised with every module that gains tests (see TODO.md, section "Tests").
fail_under = 39

[tool.pyright]
exclude = [
    "**/.*",
    "**/__pycache__",
    "**/*.pyc",
    ".venv",
    "venv",
    "**/node_modules",
]
reportUnannotatedClassAttribute = "none"
reportUnusedCallResult = "none"
reportCallInDefaultInitializer = "none"
reportImplicitOverride = "none"
reportMissingTypeStubs = "none"
reportImplicitStringConcatenation = "none"
