[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termcore"
version = "0.2.0"
description = "Terminal utilities for CLI, TUI, IO and general use"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = ["rich", "textual", "pyyaml"]
keywords = ["cli", "tui", "terminal", "io", "utils"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Terminals",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.31",
    "coverage>=7.13.4",
    "pytest>=9.0",
    "pytest-asyncio>=1.0",  # required to drive Textual apps via run_test()
    "pytest-cov>=7.0",
    "ruff>=0.15",
]

[project.urls]
Homepage = "https://github.com/cgroening/py-termcore"
Repository = "https://github.com/cgroening/py-termcore"

[tool.ruff]
line-length = 80
target-version = "py312"
extend-exclude = [".venv", "venv"]

# The formatter is deliberately not configured. Running it would rewrite 41 of
# the 55 files here for no behavioural gain, and the style guide gives these
# documented rules precedence over an automatic formatter anyway (1.2.1).
# The column limit is enforced by E501 below; line breaking stays hand-made.

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "D",     # pydocstyle
    "UP",    # pyupgrade
    "ANN",   # flake8-annotations
    "S",     # flake8-bandit (security)
    "B",     # flake8-bugbear
    "A",     # flake8-builtins (no shadowing of builtins)
    "BLE",   # flake8-blind-except
    "C4",    # flake8-comprehensions
    "C90",   # mccabe complexity
    "DTZ",   # flake8-datetimez (no naive datetimes)
    "ERA",   # eradicate (no commented-out code)
    "FBT",   # flake8-boolean-trap (no flag arguments)
    "G",     # flake8-logging-format
    "INP",   # flake8-no-pep420 (every package needs __init__.py)
    "LOG",   # flake8-logging
    "PIE",   # flake8-pie
    "Q",     # flake8-quotes (double quotes, even when that means escaping)
    "RSE",   # flake8-raise
    "SIM",   # flake8-simplify
    "SLF",   # flake8-self (no private member access across objects)
    "T20",   # flake8-print (visible output goes through termcore.cli.output)
    "TC",    # flake8-type-checking
    "TRY",   # tryceratops
    "PTH",   # flake8-use-pathlib
    "PT",    # flake8-pytest-style
    "RET",   # flake8-return
    "ARG",   # flake8-unused-arguments
    "TID",   # flake8-tidy-imports
    "PL",    # pylint
    "RUF",   # ruff-specific rules
]
# The numpy convention disables D212 and D213 alike, which silently permits
# both layouts. D213 has to be re-enabled explicitly to enforce the one the
# style guide mandates: summary on the line after the opening quotes.
extend-select = ["D213"]

ignore = [
    "D107",    # __init__ is documented in the class docstring
    "D203",    # conflicts with D211 (no blank line before class docstring)
    "D212",    # conflicts with D213 (summary on the line after the quotes)
    "D401",    # summaries use 3rd person ("Prints..."), not the imperative
    # TRY003 bans descriptive messages at the raise site, which works against
    # the rule that exceptions must carry context (what, where, why).
    "TRY003",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"
# Section 3.2.5 requires a string holding a double quote to keep it escaped
# rather than switch delimiters. Without this, Q003 reports every one of them.
avoid-escape = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.pylint]
max-args = 3  # style guide: keep parameter count at 3 or below

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # re-export the public package API
# Theme folders are loaded by path through ThemeLoader, never imported, and
# their directory names are not valid identifiers.
"termcore/tui/themes/*/theme.py" = ["INP001", "D100"]
# termcore.cli.output is the module that owns visible console output; a print
# here is the product, not a stray debug statement.
"termcore/cli/output.py" = ["T201"]
# Textual reads annotations at runtime, so a type-only import moved into
# a TYPE_CHECKING block stops resolving (style guide 3.2.9).
"termcore/tui/**" = ["TC002", "TC003"]
"tests/**" = [
    "S101",    # assert is the point of a test
    "D",       # no docstrings required in tests
    "ANN",     # no annotations required in tests
    "PLR2004", # magic values are fine as expected test values
    "SLF001",  # tests legitimately reach into private members
    "PLR0913", # a fixture factory takes what the cases need to vary
    "PT011",   # pytest.raises(Exception) is deliberate where the library
               # deliberately lets the driver's own error through
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"  # TUI tests are async; no per-test marker needed
xfail_strict = true    # an xfail that passes is a stale expectation
# A warning is a defect that has not surfaced yet, so the suite fails on it.
# Third-party deprecations get an explicit entry here rather than turning the
# rule off, so that each exception stays visible and dated.
filterwarnings = ["error"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=termcore",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["termcore"]
branch = true

[tool.coverage.report]
show_missing = true
# Holds the current level. Coverage that enforces nothing is decoration.
# Raised with every module that gains tests (see TODO.md, section "Tests").
fail_under = 73

[tool.pyright]
# Section 3.2.5 of the style guide asks for strict. Worth knowing what that
# means with basedpyright, whose own default is "recommended": recommended is
# the stricter of the two, so this line does not tighten the checking here -
# it states the contract, and it is what a consumer running plain pyright
# needs, since pyright's default "standard" really is lax.
typeCheckingMode = "strict"
exclude = [
    "**/.*",
    "**/__pycache__",
    "**/*.pyc",
    ".venv",
    "venv",
    "**/node_modules",
]
# The four below are inert under strict, which does not enable them. They are
# kept because they describe real properties of this codebase, so switching to
# "recommended" stays a one-line change: without them that mode reports 146
# warnings here, 105 of them reportUnusedCallResult alone.
#
# Textual's API returns values from methods called for their side effect
# (mount, register_theme, add_row); consuming each one adds noise.
reportUnusedCallResult = "none"
# Textual widgets declare class attributes (BINDINGS, CSS_PATH, reactives)
# whose types come from the base class.
reportUnannotatedClassAttribute = "none"
# Overriding a Textual hook without @override is the framework's own style.
reportImplicitOverride = "none"
# Adjacent string literals are how long messages are wrapped within 80 columns.
reportImplicitStringConcatenation = "none"
#
# Removed after measuring: reportCallInDefaultInitializer and
# reportMissingTypeStubs reported nothing in either mode.
